generate Readme file
